commit after implementing the functionalities

--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
             <div class="boxAr br-r br-b"><span class="textArea"></span></div>
         </div>
         <div class="gameOption">
-            <h1>Turn of <span class="info"></span></h1>
-            <button class="resert">Reset</button>
+            <h1 class="turn-info">Turn of <span class="info"></span></h1>
+            <h1 class="win-info"></h1>
+            <button class="reset">Reset</button>
         </div>
         <div class="reaction">
             <img src="excited.gif" alt="">
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
